RBAC workflow and various fixes
